--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "motion": "^12.5.0",
     "next": "15.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
