--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "apexcharts": "^4.5.0",
     "autoprefixer": "^10.4.21",
     "motion": "^12.5.0",
     "next": "15.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
