feat: new component for SubsctiptionPlans and new page for PaymentInfo

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-multi-date-picker": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
