feat: ass remainigRequestsWithMobile mehtod in Services and api

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.21",
     "motion": "^12.5.0",
     "next": "15.2.2",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
