--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^6.7.0",
     "apexcharts": "^4.5.0",
     "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.508.0",
     "motion": "^12.5.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
