feat: complete mobile-based login with OTP, JWT cookie, and dashboard access control

--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@prisma/client": "^6.7.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "apexcharts": "^4.5.0",
     "autoprefixer": "^10.4.21",
+    "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.508.0",
     "motion": "^12.5.0",
     "next": "15.2.2",
@@ -24,7 +27,8 @@
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react-hook-form": "^7.56.3",
+    "react-hot-toast": "^2.5.2",
     "react-multi-date-picker": "^4.5.2"
   },
   "devDependencies": {
